@@ -5,6 +5,7 @@ Release notes for python-sflow library and splitsflow application
   * print statements to see what's going - temporary. To be captured by calling routine
   * added (template) structures for Counters type 6-10 (ieee80211, lag, slow_path, ib, sfp)
   * structure for LAG counter implemented
+  * class flowdata_record_ethernet() implemented
 * splisflow.py - v0.4.3
   * logger.debug repr(sample) in case of CounterSample object
 
